<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- MDT : Mod Development Tool -->
    <string name="app_name" translatable="false">MDT</string>

    <!-- Activity title -->
    <string name="title_activity_create_project">Create project</string>
    <string name="title_activity_create_patch">Create patch</string>
    <string name="title_activity_file_chooser">Choose file</string>
    <string name="title_activity_edit_patch">Edit patch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_project">Project</string>
    <string name="title_activity_export_project">Export project</string>
    <string name="title_activity_information">Information</string>

    <!-- Action bar item -->
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_export">Export</string>
    <string name="action_change_author_name">Change author name</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_select">Select</string>

    <!-- Dialog title -->
    <string name="dialog_title_close">Close</string>
    <string name="dialog_title_confirm_delete">Are you sure?</string>
    <string name="dialog_title_error_occurred">Error occurred</string>

    <!-- Dialog message -->
    <string name="dialog_message_close_without_saving">Are you sure you want to close without saving?</string>
    <string name="dialog_message_confirm_patch_delete">Are you sure to delete this patch? You cannot revert after deletion.</string>
    <string name="dialog_message_confirm_project_delete" formatted="false">Are you sure to delete project %s? You cannot revert after deletion.</string>

    <!-- Dialog button text -->
    <string name="dialog_text_open">Open</string>
    <string name="dialog_text_delete">Delete</string>

    <!-- Toast message -->
    <string name="toast_patch_deleted">That patch was deleted successfully.</string>
    <string name="toast_project_deleted" formatted="false">Project %s was deleted successfully.</string>
    <string name="toast_project_empty">Project is empty.</string>
    <string name="toast_project_exported">Project was exported successfully.</string>
    <string name="toast_project_nothing_to_export">Nothing to export!</string>
    <string name="toast_project_has_overlapped_patches">Project has overlapped patches!</string>
    <string name="toast_cache_created">Cache has been created.</string>
    <string name="toast_cache_loaded">Cache has been loaded.</string>

    <!-- EditText error -->
    <string name="error_empty" formatted="false">%s cannot be empty!</string>
    <string name="error_project_already_exists" formatted="false">Project %s already exists!</string>

    <!-- WorkspaceActivity -->
    <string name="workspace_project_information" formatted="false">%d patches, by %s</string>

    <!-- ExportProjectActivity -->
    <string name="export_project_type">Export type</string>
    <string name="export_project_directory">Export directory</string>

    <!-- CreateProjectActivity -->
    <string name="create_project_project_name">Project Name</string>
    <string name="create_project_author_name">Author Name</string>
    <string name="create_project_warning_message">Project name cannot be changed later!</string>

    <!-- CreatePatchActivity -->
    <string name="create_patch_offset">Offset</string>
    <string name="create_patch_no_information">No information</string>
    <string name="create_patch_value">Value</string>
    <string name="create_patch_value_type_hex">Hex</string>
    <string name="create_patch_value_type_unicode">Unicode</string>
    <string name="create_patch_memo">Memo</string>
    <string name="create_patch_is_excluded">Excluded</string>

    <!-- List item -->
    <string name="list_item_title" translatable="false">Title</string>
    <string name="list_item_subtitle" translatable="false">Subtitle</string>
    <string name="list_item_image" translatable="false">Image</string>

    <!-- SettingsActivity -->
    <string name="settings_inconsolata" translatable="false">Inconsolata font</string>
    <string name="settings_inconsolata_license" translatable="false">Copyright © 2006 Raph Levien\nUsed under the SIL Open Font License, http://scripts.sil.org/OFL\n\n</string>
    <string name="settings_material_design_icons" translatable="false">Material-Design-Icons by Google</string>
    <string name="settings_material_design_icons_license" translatable="false">Used under an Attribution 4.0 International license, http://creativecommons.org/licenses/by/4.0/\n\n</string>
    <string name="settings_floating_action_button" translatable="false">Android-Floating-Action-Button</string>
    <string name="settings_floating_action_button_license" translatable="false">Copyright © 2014 Jerzy Chalupski\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n\u0020\u0020\u0020\u0020http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.\n\n</string>

    <!-- Default values -->
    <string name="default_fileName" translatable="false">File</string>
    <string name="default_authorName" translatable="false">Unknown</string>
    <string name="default_cacheDirectory" translatable="false">PEAnalyzerCache</string>

    <!-- Preferences -->
    <string name="preference_category_patch_related" translatable="false">Patch</string>
    <string name="preference_category_cache_related" translatable="false">Cache</string>
    <string name="preference_category_information" translatable="false">Information</string>

    <string name="preference_title_default_value">Default value</string>
    <string name="preference_title_cache">Load cache when the app starts</string>
    <string name="preference_title_license_information">License information</string>

    <string name="hello_world" translatable="false">Hello world!</string>
</resources>