<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_inconsolata"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/settings_inconsolata_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_inconsolata_license"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_material_design_icons"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/settings_material_design_icons_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_material_design_icons_license"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_floating_action_button"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/settings_floating_action_button_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_floating_action_button_license"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>