<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreatePatchActivity">

    <TextView
        android:id="@+id/create_patch_offset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_patch_offset" />

    <EditText
        android:id="@+id/create_patch_offset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_offset_text"
        android:digits="0123456789abcdefABCDEF"
        android:inputType="textCapCharacters"/>

    <Space
        android:id="@+id/create_patch_space1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap"
        android:layout_below="@id/create_patch_offset" />

    <TextView
        android:id="@+id/create_patch_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_space1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_patch_value" />


    <RadioGroup
        android:id="@+id/create_patch_value_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/create_patch_value_text"
        android:layout_alignBottom="@+id/create_patch_value_text"
        android:layout_toRightOf="@id/create_patch_value_text"
        android:layout_toEndOf="@id/create_patch_value_text"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">

        <RadioButton
            android:id="@+id/create_patch_value_type_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_patch_value_type_hex"
            android:checked="true" />

        <RadioButton
            android:id="@+id/create_patch_value_type_unicode"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_patch_value_type_unicode" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/create_patch_value_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_value_text">

        <EditText
            android:id="@+id/create_patch_value_hex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:digits="0123456789abcdefABCDEF"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/create_patch_value_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:inputType="text" />

    </FrameLayout>


    <Space
        android:id="@+id/create_patch_space2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap"
        android:layout_below="@id/create_patch_value_wrapper" />

    <TextView
        android:id="@+id/create_patch_memo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_space2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_patch_memo" />

    <EditText
        android:id="@+id/create_patch_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_memo_text"
        android:inputType="textPersonName"/>

    <Space
        android:id="@+id/create_patch_space3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap"
        android:layout_below="@id/create_patch_memo" />

    <CheckBox
        android:id="@+id/create_patch_is_excluded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_patch_space3"
        android:text="@string/create_patch_is_excluded" />
</RelativeLayout>