<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mcpekorea.mdt.ExportProjectActivity">

    <TextView
        android:id="@+id/export_project_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/export_project_type" />

    <Spinner
        android:id="@+id/export_project_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/export_project_type_text"
        android:entries="@array/export_types" />

    <Space
        android:id="@+id/export_project_space1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap"
        android:layout_below="@id/export_project_type_spinner" />

    <TextView
        android:id="@+id/export_project_directory_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/export_project_space1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/export_project_directory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/export_project_directory_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="clip_vertical">

        <EditText
            android:id="@+id/export_project_directory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/export_project_directory"
            android:layout_weight="1"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectDirectory"
            android:text="@string/action_select"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:id="@+id/export_project_select" />
    </LinearLayout>


</RelativeLayout>
